# rotary-phone

./: .gitignore  Cargo.toml  index.html
assets/: sprites.aseprite
src/: arena.rs  components.rs  context_map.rs  main.rs
src/plugins/: ai.rs  character.rs  collision.rs  events.rs  mod.rs  movement.rs  player_input.rs  skills.rs  timers.rs
src/plugins/ai/: events.rs  follow.rs  mod.rs  random_walk.rs  routines.rs
src/plugins/ai/routines/: attack.rs  follow.rs  mod.rs  routines.rs  rush.rs
src/plugins/ai/steer/: avoid.rs  chase.rs  mod.rs  other.rs
src/plugins/character/: actor.rs  dash.rs  flip.rs  health.rs  mod.rs  skills.rs  wiggle.rs
