[package]
name = "rotary-phone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
rand = "0.8.5"
bevy_rapier2d = { version = "0.21.0", features = [ "wasm-bindgen", "debug-render-2d" ] }
once_cell = "1.17.1"
bevy_prototype_debug_lines = "0.10"
#https://github.com/abnormalbrain/bevy_particle_systems

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# cargo build --target wasm32-unknown-unknown --release
# wasm-bindgen --out-dir ./web_dist/ --target web ./target/wasm32-unknown-unknown/release/rotary-phone.wasm